v6_0_3 Dec. 21 2014
-------------------
	1. Update mkvariables.py (remove obsolute module elementtree)

v6_0_2 Dec. 20 2014
-------------------
	1. Update mkntuplecfi.py to use new format of classlist.txt.

v6_0_1 Dec. 18 2014
-------------------
	1. Moved non-template code from Buffer.h and BufferUtil.h to
	BufferUtil.cc and reshuffled code to try to speed up compilation.
	The compilation of TNM now takes 4 minutes on an 8-core machine.
	2. Changed eventStream to eventBuffer, which is a better name since
	objects of this class are buffers for events read from a file.
	3. Decoupled creation of branchnames, and hence the file variables.txt,
	by TNM from from the creation of buffers. This is another step towards
	the replacement of Root Reflex by gROOT->ProcessLine in Root 6, which
	uses a Just-In-Time compiler to "interpret" C++ on-the-fly. 

v6_0_0 Dec. 16 2014
-------------------
	1. Major change to mkanalyzer.py. Variables are now encapsulated 
	within a struct (eventStream).
	2. Python version of analyzer uses exactly the same code as C++
	version
	3. mkmacro.py disabled until further notice
	4. Compilation still glacial under new compiler

v5_6_6 Jan. 24 2014
-------------------
	1. Handle duplicate branchnames in BufferUtil.cc
	2. Set number of plugins/file to 30 in mkplugins.py
	3. Get number of PDF members/PDF set automatically in
	   GenEventProductInfoHelper
	4. Add PDFexample_cfi.py to python directory

v5_6_5 Sept.11 2013
-------------------
	1. Remove MethodT* from release. Works now for 7_0_0_pre2.

v5_6_4 Sept.10 2013
-------------------
	1. Better workaround works for 6_0_0, but fails for 7_0_0_pre2. Try using
	more forwarded classes.

v5_6_3 Sept. 7 2013
-------------------
	1. Provide a better workaround the use of new C++ constructs in 
	HLTConfigProvider etc. that causes codes using HelperFor not to
	compile. HelperFor no longer includes the HLTConfigProvider, Event,
	and ParameterSet headers. Instead HelperFor uses forward declarations 