@@ -1,3 +1,8 @@
+v6_0_4 Jan. 09 2015
+-------------------
+        1. Make mkhelper.py compatible with CMSSW_7_X_X. In particular, fix
+        compilation problem with helpers for edm::Event.
+
 v6_0_3 Dec. 21 2014
 -------------------
 	1. Update mkvariables.py (remove obsolute module elementtree)
